# disco

./: .gitignore  .pre-commit-config.yaml  Home.md  Inference-using-pretrained-models.md  Installation.md  LICENSE.txt  Labeling-and-extracting-data.md  Labeling-data.md  MANIFEST.in  Pipfile  README.md  Training-new-models.md  Visualizing-data.md  confusion_matrix.py  data_feeder.py  data_loader.py  evaluate_model.py  extract_data.py  generate_histogram.py  heuristics.py  hmm_process.py  infer.py  inference_utils.py  interactive_plot.py  models.py  move_files_to_valid.py  open_and_look.py  prog_params.yaml  pyproject.toml  requirements.txt  setup.py  shopty_params.yaml  spectrogram_analysis.py  train.sh  train_model.py  train_model.sh
beetles/: __init__.py  __main__.py  cli.py  config.py  dataset.py  evaluate.sh  extract_data.py  heuristics.py  hparam_optimizer.py  infer.py  inference_utils.py  interactive_plot.py  label.py  optimize.sh  simple_labeler.py  spectrogram_analysis.py  train.py  train.sh  visualize.py
disco/: __init__.py  __main__.py  accuracy_metrics.py  beetles_metrics.py  compare_init_techniques.py  config.py  dataset.py  disco_default_performance.py  entrypoint.py  evaluate_beetles_test_files.py  eventwise_accuracy_plot.py  eventwise_roc_plot.py  extract_data.py  figure_utils.py  heuristics.py  hmm_accuracy_metrics.py  infer.py  inference_utils.py  iqr_histogram_noised_data.py  label.py  oal.py  pointwise_accuracy.py  pre_and_post_gapfill.py  pre_and_post_hmm_eventwise.py  pre_and_post_hmm_pointwise.py  qt_viz.py  scratch.py  snr_eventwise_plot.py  train.py  two_ten_thirty_random_init.py  util.py  visualize.py  whale_accuracy.py
disco_sound/: __init__.py  infer.py  label.py  visualize.py
resources/: using_beetles_on_colab.ipynb
sh-scripts/: move_files_to_valid.sh  open_and_look.sh  spectrogram_analysis.sh  train_model.sh
src/: dataset.py  heuristics.py  (+11 more)
(+286 files in other folders)
