[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "disco"
authors = [{name = "Kayla Irish", email = "kayla.irish@umontana.edu"},
    {name = "Tommy Colligan", email = "thomas.colligan@umontana.edu"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = ["numpy",
    "matplotlib",
    "pytorch_lightning",
    "torchaudio",
    "pomegranate",
    "pyyaml",
    "pandas",
    "tqdm",
    "scikit-learn"]

[project.urls]
Home = "https://github.com/TravisWheelerLab/disco"

[project.scripts]
disco = "disco:main"
